Use startsWith instead of equals to overcome Locale.ROOT default formatting for day and month names.