@@ -15,6 +15,7 @@ import java.io.IOException;
 import java.util.TimeZone;
 
 public class NamedDateTimeProcessorTests extends AbstractWireSerializingTestCase<NamedDateTimeProcessor> {
+    
     private static final TimeZone UTC = TimeZone.getTimeZone("UTC");
 
     public static NamedDateTimeProcessor randomNamedDateTimeProcessor() {
@@ -39,51 +40,54 @@ public class NamedDateTimeProcessorTests extends AbstractWireSerializingTestCase
 
     public void testValidDayNamesInUTC() {
         NamedDateTimeProcessor proc = new NamedDateTimeProcessor(NameExtractor.DAY_NAME, UTC);
-        assertEquals("Thursday", proc.process("0"));
-        assertEquals("Saturday", proc.process("-64164233612338"));
-        assertEquals("Monday", proc.process("64164233612338"));
+        // because of https://github.com/elastic/elasticsearch/issues/33621#issuecomment-420617752
+        // and the fact that -Djava.locale.providers=COMPAT option is not passed along when the jvm
+        // is forked for a test, the tests below use startsWith instead of perfect equality.
+        assertTrue(((String) proc.process("0")).startsWith("Thu"));
+        assertTrue(((String) proc.process("-64164233612338")).startsWith("Sat"));
+        assertTrue(((String) proc.process("64164233612338")).startsWith("Mon"));
 
-        assertEquals("Thursday", proc.process(new DateTime(0L, DateTimeZone.UTC)));
-        assertEquals("Thursday", proc.process(new DateTime(-5400, 12, 25, 2, 0, DateTimeZone.UTC)));
-        assertEquals("Friday", proc.process(new DateTime(30, 2, 1, 12, 13, DateTimeZone.UTC)));
-        assertEquals("Tuesday", proc.process(new DateTime(10902, 8, 22, 11, 11, DateTimeZone.UTC)));
+        assertTrue(((String) proc.process(new DateTime(0L, DateTimeZone.UTC))).startsWith("Thu"));
+        assertTrue(((String) proc.process(new DateTime(-5400, 12, 25, 2, 0, DateTimeZone.UTC))).startsWith("Thu"));
+        assertTrue(((String) proc.process(new DateTime(30, 2, 1, 12, 13, DateTimeZone.UTC))).startsWith("Fri"));
+        assertTrue(((String) proc.process(new DateTime(10902, 8, 22, 11, 11, DateTimeZone.UTC))).startsWith("Tue"));
     }
     
     public void testValidDayNamesWithNonUTCTimeZone() {
         NamedDateTimeProcessor proc = new NamedDateTimeProcessor(NameExtractor.DAY_NAME, TimeZone.getTimeZone("GMT-10:00"));
-        assertEquals("Wednesday", proc.process("0"));
-        assertEquals("Friday", proc.process("-64164233612338"));
-        assertEquals("Monday", proc.process("64164233612338"));
+        assertTrue(((String) proc.process("0")).startsWith("Wed"));
+        assertTrue(((String) proc.process("-64164233612338")).startsWith("Fri"));
+        assertTrue(((String) proc.process("64164233612338")).startsWith("Mon"));
 
-        assertEquals("Wednesday", proc.process(new DateTime(0L, DateTimeZone.UTC)));
-        assertEquals("Wednesday", proc.process(new DateTime(-5400, 12, 25, 2, 0, DateTimeZone.UTC)));
-        assertEquals("Friday", proc.process(new DateTime(30, 2, 1, 12, 13, DateTimeZone.UTC)));
-        assertEquals("Tuesday", proc.process(new DateTime(10902, 8, 22, 11, 11, DateTimeZone.UTC)));
-        assertEquals("Monday", proc.process(new DateTime(10902, 8, 22, 9, 59, DateTimeZone.UTC)));
+        assertTrue(((String) proc.process(new DateTime(0L, DateTimeZone.UTC))).startsWith("Wed"));
+        assertTrue(((String) proc.process(new DateTime(-5400, 12, 25, 2, 0, DateTimeZone.UTC))).startsWith("Wed"));
+        assertTrue(((String) proc.process(new DateTime(30, 2, 1, 12, 13, DateTimeZone.UTC))).startsWith("Fri"));
+        assertTrue(((String) proc.process(new DateTime(10902, 8, 22, 11, 11, DateTimeZone.UTC))).startsWith("Tue"));
+        assertTrue(((String) proc.process(new DateTime(10902, 8, 22, 9, 59, DateTimeZone.UTC))).startsWith("Mon"));
     }
     
     public void testValidMonthNamesInUTC() {
-        NamedDateTimeProcessor proc = new NamedDateTimeProcessor(NameExtractor.MONTH_NAME, UTC);
-        assertEquals("January", proc.process("0"));
-        assertEquals("September", proc.process("-64164233612338"));
-        assertEquals("April", proc.process("64164233612338"));
+        NamedDateTimeProcessor proc  = new NamedDateTimeProcessor(NameExtractor.MONTH_NAME, UTC);
+        assertTrue(((String) proc.process("0")).startsWith("Jan"));
+        assertTrue(((String) proc.process("-64164233612338")).startsWith("Sep"));
+        assertTrue(((String) proc.process("64164233612338")).startsWith("Apr"));
 
-        assertEquals("January", proc.process(new DateTime(0L, DateTimeZone.UTC)));
-        assertEquals("December", proc.process(new DateTime(-5400, 12, 25, 10, 10, DateTimeZone.UTC)));
-        assertEquals("February", proc.process(new DateTime(30, 2, 1, 12, 13, DateTimeZone.UTC)));
-        assertEquals("August", proc.process(new DateTime(10902, 8, 22, 11, 11, DateTimeZone.UTC)));
+        assertTrue(((String) proc.process(new DateTime(0L, DateTimeZone.UTC))).startsWith("Jan"));
+        assertTrue(((String) proc.process(new DateTime(-5400, 12, 25, 10, 10, DateTimeZone.UTC))).startsWith("Dec"));
+        assertTrue(((String) proc.process(new DateTime(30, 2, 1, 12, 13, DateTimeZone.UTC))).startsWith("Feb"));
+        assertTrue(((String) proc.process(new DateTime(10902, 8, 22, 11, 11, DateTimeZone.UTC))).startsWith("Aug"));
     }
     
     public void testValidMonthNamesWithNonUTCTimeZone() {
         NamedDateTimeProcessor proc = new NamedDateTimeProcessor(NameExtractor.MONTH_NAME, TimeZone.getTimeZone("GMT-3:00"));
-        assertEquals("December", proc.process("0"));
-        assertEquals("August", proc.process("-64165813612338")); // GMT: Tuesday, September 1, -0064 2:53:07.662 AM
-        assertEquals("April", proc.process("64164233612338")); // GMT: Monday, April 14, 4003 2:13:32.338 PM
+        assertTrue(((String) proc.process("0")).startsWith("Dec"));
+        assertTrue(((String) proc.process("-64165813612338")).startsWith("Aug")); // GMT: Tuesday, September 1, -0064 2:53:07.662 AM
+        assertTrue(((String) proc.process("64164233612338")).startsWith("Apr")); // GMT: Monday, April 14, 4003 2:13:32.338 PM
 
-        assertEquals("December", proc.process(new DateTime(0L, DateTimeZone.UTC)));
-        assertEquals("November", proc.process(new DateTime(-5400, 12, 1, 1, 1, DateTimeZone.UTC)));
-        assertEquals("February", proc.process(new DateTime(30, 2, 1, 12, 13, DateTimeZone.UTC)));
-        assertEquals("July", proc.process(new DateTime(10902, 8, 1, 2, 59, DateTimeZone.UTC)));
-        assertEquals("August", proc.process(new DateTime(10902, 8, 1, 3, 00, DateTimeZone.UTC)));
+        assertTrue(((String) proc.process(new DateTime(0L, DateTimeZone.UTC))).startsWith("Dec"));
+        assertTrue(((String) proc.process(new DateTime(-5400, 12, 1, 1, 1, DateTimeZone.UTC))).startsWith("Nov"));
+        assertTrue(((String) proc.process(new DateTime(30, 2, 1, 12, 13, DateTimeZone.UTC))).startsWith("Feb"));
+        assertTrue(((String) proc.process(new DateTime(10902, 8, 1, 2, 59, DateTimeZone.UTC))).startsWith("Jul"));
+        assertTrue(((String) proc.process(new DateTime(10902, 8, 1, 3, 00, DateTimeZone.UTC))).startsWith("Aug"));
     }
 }
